src/test/ui/conversion-methods.stderr
error[E0308]: mismatched types
  --> $DIR/conversion-methods.rs:5:41
   |
LL |     let _tis_an_instants_play: String = "'Tis a fond Ambush—";
   |                                         ^^^^^^^^^^^^^^^^^^^^^
   |                                         |
   |                                         expected struct `String`, found reference
   |                                         help: try using a conversion method: `"'Tis a fond Ambush—".to_string()`
   |
   = note: expected type `String`
              found type `&'static str`

error[E0308]: mismatched types
  --> $DIR/conversion-methods.rs:6:40
   |
LL |     let _just_to_make_bliss: PathBuf = Path::new("/ern/her/own/surprise");
   |                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                                        |
   |                                        expected struct `PathBuf`, found &Path
   |                                        help: try using a conversion method: `Path::new("/ern/her/own/surprise").to_path_buf()`
   |
   = note: expected type `PathBuf`
              found type `&Path`
             via imports `use std::path::{Path, PathBuf};`

error[E0308]: mismatched types
  --> $DIR/conversion-methods.rs:9:40
   |
LL |     let _but_should_the_play: String = 2; // Perhaps surprisingly, we suggest .to_string() here
   |                                        ^
   |                                        |
   |                                        expected struct `String`, found integer
   |                                        help: try using a conversion method: `2.to_string()`
   |
   = note: expected type `String`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/conversion-methods.rs:12:47
   |
LL |     let _prove_piercing_earnest: Vec<usize> = &[1, 2, 3];
   |                                               ^^^^^^^^^^
   |                                               |
   |                                               expected struct `Vec`, found reference
   |                                               help: try using a conversion method: `(&[1, 2, 3]).to_vec()`
   |
   = note: expected type `Vec<usize>`
              found type `&[{integer}; 3]`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0308`.
